--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-config-mdcs": "^5.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "gh-pages": "^4.0.0",
     "http-proxy-middleware": "^2.0.6",
     "parcel": "^2.5.0",
     "parcel-resolver-exclude-assets": "^2.0.0",
@@ -30,7 +31,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel",
     "build": "parcel build",
-    "dev": "concurrently \"npm run start\" \"http-server -p 1235\""
+    "dev": "concurrently \"npm run start\" \"http-server -p 1235\"",
+		"predeploy": "rm -rf dist && parcel build ./src/index.pug --public-url \"https://pnichols04.github.io/starflight-planets\" && cp -r ./assets ./dist",
+    "deploy": "gh-pages -d dist"
   },
   "author": "Philip Nichols",
   "license": "MIT",
